# lofs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  README.ru.md  rust-toolchain.toml
.github/workflows/: ci.yml  release.yml
bench/: registry-comparison.md
crates/lofs-cli/: Cargo.toml
crates/lofs-cli/src/: main.rs
crates/lofs-core/: Cargo.toml
crates/lofs-core/benches/: registry_comparison.rs
crates/lofs-core/src/: bucket.rs  error.rs  lib.rs
crates/lofs-core/src/oci/: manifest.rs  media_types.rs  mod.rs  rate_limit.rs  registry.rs
crates/lofs-core/src/oci/driver/: generic.rs  ghcr.rs  harbor.rs  mod.rs
crates/lofs-core/src/oci/driver/gitlab/: api.rs  mod.rs
crates/lofs-core/tests/: it_gitlab.rs  it_registry.rs
crates/lofs-core/tests/common/: mod.rs
crates/lofs-mcp/: Cargo.toml
crates/lofs-mcp/src/: main.rs
docker/: Dockerfile.cli  docker-compose.yml  zot-config.json
docs/: IMPLEMENTATION_PLAN.md
docs/architecture/adr/: ADR-001-lofs.md  ADR-002-cooperative-coordination.md  README.md
docs/architecture/research/: README.md  RESEARCH-002-crdt-fs-space.md  RESEARCH-003-layered-bucket-storage.md  RESEARCH-004-rustfs-oci-coordination.md  RESEARCH-005-rust-oci-ecosystem.md  RESEARCH-006-oss-prior-art.md
skills/: README.md
skills/lofs-handoff/: skill.md
