[package]
name = "lofs-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "CLI for LOFS — mirrors the MCP surface plus ops/dev commands"

[[bin]]
name = "lofs"
path = "src/main.rs"

[dependencies]
lofs-core = { workspace = true }

tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }

anyhow = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

clap = { workspace = true }
chrono = { workspace = true }
uuid = { workspace = true }
