[package]
name = "lofs-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
description = "Core types, OCI-backed persistence, and overlay primitives for LOFS (Layered Overlay File System)"

[dependencies]
# OCI wire — what we use today.
oci-client = { workspace = true }

# Async runtime (oci-client + reqwest are both tokio-based).
tokio = { workspace = true }

# HTTP client for the bits oci-client doesn't expose (catalog walk, manifest DELETE).
reqwest = { workspace = true }

# dyn-safe async-fn-in-trait (until Rust stabilises it for object-safe traits).
async-trait = { workspace = true }

# Low-level Response building for the GitLab driver fallback.
http = { workspace = true }
bytes = { workspace = true }

# Serialization + error handling.
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }

# Utilities.
uuid = { workspace = true }
chrono = { workspace = true }

# --- DEFERRED (re-enable as the Phase 1.2+ backend lands) -----------------
#
# Storage + hashing (snapshot digest, canonical CBOR, blob cache):
#   blake3 = { workspace = true }
#   ciborium = { workspace = true }
#   opendal = { workspace = true }
#
# Compression + tar packing (commit-time layer builder):
#   tar = { workspace = true }                # sync — never tokio-tar (CVE-2025-62518)
#   zstd = { workspace = true }
#
# Observability helpers inside core:
#   anyhow = { workspace = true }
#   tracing = { workspace = true }
#   hex = { workspace = true }
#
# Linux-only overlay / FUSE / user-namespace syscalls (Phase 1.2 mount backend):
# [target.'cfg(target_os = "linux")'.dependencies]
#   fuser = { workspace = true }
#   nix = { workspace = true }
#   caps = { workspace = true }
#   sys-mount = { workspace = true }
#
# Each of the above pulls in something non-trivial (system libs, C/C++ codegen,
# large transitive trees) — gating them to the phase that actually exercises
# the feature keeps MVP builds fast and the Docker image slim.

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros", "fs", "io-util", "sync", "process", "time"] }
futures = "0.3"
criterion = { version = "0.5", features = ["async_tokio"] }

[[bench]]
name = "registry_comparison"
harness = false
path = "benches/registry_comparison.rs"
